--- a/2c_src-pg-debezium-cdc-consultants.properties
+++ b/2c_src-pg-debezium-cdc-consultants.properties
@@ -2,7 +2,7 @@
 # Owner = Saurav Mitra
 # Source = PostgreSQL
 # Connector = PostgresConnector (Debezium)
-# Scenario = CDC Extraction Single Table (consultants) to Kafka Topic (pg-consultants)
+# Scenario = CDC Extraction Single Table (consultants) to Kafka Topic (pg-cdc-consultants)
 # Note: Replace the key field with primary key column
 
 name = src-pg-debezium-cdc-consultants
@@ -18,17 +18,18 @@ table.include.list = public.consultants
 numeric.mapping = best_fit
 decimal.handling.mode = double
 time.precision.mode = connect
-key.converter = org.apache.kafka.connect.json.JsonConverter
+# key.converter = org.apache.kafka.connect.json.JsonConverter
+key.converter = org.apache.kafka.connect.storage.StringConverter
 key.converter.schemas.enable = false
-# value.converter = org.apache.kafka.connect.json.JsonConverter
-# value.converter.schemas.enable = false
+# value.converter = io.confluent.connect.avro.AvroConverter
+# value.converter.schemas.enable = true
 transforms = route,unwrap,key
 transforms.route.type = org.apache.kafka.connect.transforms.RegexRouter
 transforms.route.regex = (.*)\\.(.*)\\.(.*)
-transforms.route.replacement = pg-$3
+transforms.route.replacement = pg-cdc-$3
 transforms.unwrap.type = io.debezium.transforms.ExtractNewRecordState
 transforms.unwrap.drop.tombstones = false
 transforms.unwrap.delete.handling.mode = none
 transforms.key.type = org.apache.kafka.connect.transforms.ExtractField$Key
 transforms.key.field = id
-tasks.max = 3
+tasks.max = 1
