--- a/4c_src-mssql-debezium-cdc-customer.properties
+++ b/4c_src-mssql-debezium-cdc-customer.properties
@@ -1,20 +1,19 @@
-# Name = 3c_src-mysql-debezium-cdc-product.properties
+# Name = 2c_src-mssql-debezium-cdc-customer.properties
 # Owner = Saurav Mitra
-# Source = MySQL
-# Connector = MySqlConnector (Debezium)
-# Scenario = CDC Single Table (product) in Schema (sales) to Kafka Topic (mysql-cdc-product)
+# Source = MSSQL
+# Connector = SqlServerConnector (Debezium)
+# Scenario = CDC Extraction Single Table (customer) to Kafka Topic (mssql-cdc-Customer)
 # Note: Replace the key field with primary key column
 
-name = src-mysql-debezium-cdc-sales
-connector.class = io.debezium.connector.mysql.MySqlConnector
+name = src-mssql-debezium-cdc-customer
+connector.class = io.debezium.connector.sqlserver.SqlServerConnector
 database.hostname = 10.0.1.100
-database.port = 3306
-database.user = root
+database.port = 1433
+database.user = sa
 database.password = Pa55w0rd1234
-# database.dbname = sales
-database.server.name = sales
-table.include.list = sales.product
-# database.include.list = sales
+database.dbname = AdventureWorks
+database.server.name = AdventureWorks
+table.include.list = SalesLT.Customer
 include.schema.changes = false
 numeric.mapping = best_fit
 decimal.handling.mode = double
@@ -27,15 +26,15 @@ key.converter.schemas.enable = false
 transforms = route,unwrap,key
 transforms.route.type = org.apache.kafka.connect.transforms.RegexRouter
 transforms.route.regex = (.*)\\.(.*)\\.(.*)
-transforms.route.replacement = mysql-cdc-$3
+transforms.route.replacement = mssql-cdc-$3
 transforms.unwrap.type = io.debezium.transforms.ExtractNewRecordState
 transforms.unwrap.drop.tombstones = false
 transforms.unwrap.delete.handling.mode = none
 transforms.key.type = org.apache.kafka.connect.transforms.ExtractField$Key
-transforms.key.field = id
+transforms.key.field = CustomerID
 tasks.max = 1
 database.history.kafka.bootstrap.servers = ip-10-0-1-20.us-west-2.compute.internal:9092,ip-10-0-1-21.us-west-2.compute.internal:9092,ip-10-0-1-22.us-west-2.compute.internal:9092
-database.history.kafka.topic = dbhistory.sales
+database.history.kafka.topic = dbhistory.saleslt
 
 
 # SASL/SSL
