--- a/8b_src-file-csvsrc-cust.properties
+++ b/8b_src-file-csvsrc-cust.properties
@@ -1,17 +1,19 @@
-# Name = 8a_src-file-fstream-cust.properties
+# Name = 8b_src-file-csvsrc-cust.properties
 # Owner = Saurav Mitra
 # Source = File
-# Connector = FileStreamSourceConnector
-# Scenario = Load Single File (cust.txt) to Kafka Topic (file-cust); Poll after 5 minutes
+# Connector = SpoolDirCsvSourceConnector
+# Scenario = Load Single File (cust.txt) to Kafka Topic (file-csv-cust); Poll after 5 minutes
 
-name = src-file-fstream-cust
-connector.class = org.apache.kafka.connect.file.FileStreamSourceConnector
-key.converter = org.apache.kafka.connect.storage.StringConverter
-value.converter = org.apache.kafka.connect.storage.StringConverter
-file = /tmp/cust.txt
-topic = file-cust
-numeric.mapping = best_fit
-poll.interval.ms = 300000
+name = src-file-csvsrc-cust
+connector.class = com.github.jcustenborder.kafka.connect.spooldir.SpoolDirCsvSourceConnector
+input.path = /tmp
+input.file.pattern = cust.txt
+halt.on.error=false
+topic = file-csv-cust
+schema.generation.enabled = true
+csv.first.row.as.header = true
+csv.separator.char = 124
+schema.generation.key.fields = CustomerID
 tasks.max = 1
 
 
