--- a/9_1b_tgt-orcl-jdbc-upsert-consultants.properties
+++ b/9_1b_tgt-orcl-jdbc-upsert-consultants.properties
@@ -2,23 +2,24 @@
 # Owner = Saurav Mitra
 # Sink = Oracle
 # Connector = JdbcSinkConnector
-# Scenario = Insert Single Table (CONSULTANTS) from Kafka Topic (ORCL-CONSULTANTS)
+# Scenario = Upsert Single Table (CONSULTANTS) from Kafka Topic (ORCL-INCR-CONSULTANTS)
 # Dependency = 1b_src-orcl-jdbc-incr-consultants.properties
 
 name = tgt-orcl-jdbc-upsert-consultants
 connector.class = io.confluent.connect.jdbc.JdbcSinkConnector
-topics = ORCL-CONSULTANTS
-connection.url = jdbc:oracle:thin:@10.0.1.100:1525/XE
-connection.user = orcl_user
+topics = ORCL-INCR-CONSULTANTS
+connection.url = jdbc:oracle:thin:@10.0.1.100:1525/ORCLPDB1
+connection.user = ORCL_USER
 connection.password = Pa55w0rd1234
 insert.mode = upsert
-# pk.mode = record_key
-pk.mode = record_value
+pk.mode = record_key
+# pk.mode = record_value
 pk.fields = ID
+delete.enabled = true
 table.name.format = CONSULTANTS
 auto.create = false
-key.converter = org.apache.kafka.connect.json.JsonConverter
+key.converter = org.apache.kafka.connect.storage.StringConverter
 key.converter.schemas.enable = false
-# value.converter = org.apache.kafka.connect.json.JsonConverter
-# value.converter.schemas.enable = false
-tasks.max = 3
+# value.converter = io.confluent.connect.avro.AvroConverter
+# value.converter.schemas.enable = true
+tasks.max = 1
