--- a/9_1c_tgt-orcl-jdbc-upsert-consultants1.properties
+++ b/9_1c_tgt-orcl-jdbc-upsert-consultants1.properties
@@ -2,24 +2,25 @@
 # Owner = Saurav Mitra
 # Sink = Oracle
 # Connector = JdbcSinkConnector
-# Scenario = Insert Single Table (CONSULTANTS1) from Kafka Topic (ORCL-CDC-CONSULTANTS)
+# Scenario = Upsert Single Table (CONSULTANTS1) from Kafka Topic (ORCL-CDC-ORCLPDB1-CONSULTANTS)
 # Dependency = 1c_src-orcl-oracle-cdc-consultants.properties
 
 name = tgt-orcl-jdbc-upsert-consultants1
 connector.class = io.confluent.connect.jdbc.JdbcSinkConnector
-topics = ORCL-CDC-CONSULTANTS
-connection.url = jdbc:oracle:thin:@10.0.1.100:1525/XE
-connection.user = orcl_user
+topics = ORCL-CDC-ORCLPDB1-CONSULTANTS
+connection.url = jdbc:oracle:thin:@10.0.1.100:1525/ORCLPDB1
+connection.user = ORCL_USER
 connection.password = Pa55w0rd1234
 insert.mode = upsert
-# pk.mode = record_key
-pk.mode = record_value
+pk.mode = record_key
+# pk.mode = record_value
 pk.fields = ID
+delete.enabled = true
 fields.whitelist = FIRST_NAME,LAST_NAME,EMAIL,RATE,STATUS,CREATED_AT,UPDATED_AT
 table.name.format = CONSULTANTS1
 auto.create = false
-key.converter = org.apache.kafka.connect.json.JsonConverter
+key.converter = org.apache.kafka.connect.storage.StringConverter
 key.converter.schemas.enable = false
-# value.converter = org.apache.kafka.connect.json.JsonConverter
-# value.converter.schemas.enable = false
-tasks.max = 3
+# value.converter = io.confluent.connect.avro.AvroConverter
+# value.converter.schemas.enable = true
+tasks.max = 1
