--- a/9_2c_tgt-elk-elastic-upsert-consultants.properties
+++ b/9_2c_tgt-elk-elastic-upsert-consultants.properties
@@ -2,7 +2,7 @@
 # Owner = Saurav Mitra
 # Sink = Elasticsearch
 # Connector = ElasticsearchSinkConnector
-# Scenario = Insert/Update documents to Index (consultants) from Kafka Topic (pg-consultants)
+# Scenario = Insert/Update documents to Index (consultants) from Kafka Topic (pg-cdc-consultants)
 # Dependency = 2c_src-pg-debezium-cdc-consultants.properties
 
 name = tgt-elk-elastic-upsert-consultants
@@ -10,16 +10,16 @@ connector.class = io.confluent.connect.elasticsearch.ElasticsearchSinkConnector
 connection.url = http://10.0.1.100:9200
 connection.username = elastic
 connection.password = Pa55w0rd1234
-topics = pg-consultants
+topics = pg-cdc-consultants
 write.method = upsert
 behavior.on.null.values = delete
 # key.ignore = true
 schema.ignore = true
 compact.map.entries = true
-key.converter = org.apache.kafka.connect.json.JsonConverter
+key.converter = org.apache.kafka.connect.storage.StringConverter
 key.converter.schemas.enable = false
-# value.converter = org.apache.kafka.connect.json.JsonConverter
-# value.converter.schemas.enable = false
+# value.converter = io.confluent.connect.avro.AvroConverter
+# value.converter.schemas.enable = true
 transforms = dropPrefix,InsertKey,ExtractId
 transforms.dropPrefix.type = org.apache.kafka.connect.transforms.RegexRouter
 transforms.dropPrefix.regex = pg-(.*)
@@ -28,4 +28,4 @@ transforms.InsertKey.type = org.apache.kafka.connect.transforms.ValueToKey
 transforms.InsertKey.fields = id 
 transforms.ExtractId.type = org.apache.kafka.connect.transforms.ExtractField$Key
 transforms.ExtractId.field = id
-tasks.max = 3
+tasks.max = 1
