--- a/9_3c_tgt-mongo-mongo-insert-product.properties
+++ b/9_3c_tgt-mongo-mongo-insert-product.properties
@@ -2,18 +2,18 @@
 # Owner = Saurav Mitra
 # Sink = MongoDB
 # Connector = MongoSinkConnector
-# Scenario = Insert/Update documents to Collection (product) from Kafka Topic (mysql-product)
+# Scenario = Insert/Update documents to Collection (product) from Kafka Topic (mysql-cdc-product)
 # Dependency = 3c_src-mysql-debezium-cdc-product.properties
 
 name = tgt-mongo-mongo-insert-product
 connector.class = com.mongodb.kafka.connect.MongoSinkConnector
-topics = mysql-product
+topics = mysql-cdc-product
 connection.uri = mongodb://root:Pa55w0rd1234@10.0.1.100:27017
 database = sales
 collection = products
 key.ignore = true
-key.converter = org.apache.kafka.connect.json.JsonConverter
+key.converter = org.apache.kafka.connect.storage.StringConverter
 key.converter.schemas.enable = false
-# value.converter = org.apache.kafka.connect.json.JsonConverter
-# value.converter.schemas.enable = false
-tasks.max = 3
+# value.converter = io.confluent.connect.avro.AvroConverter
+# value.converter.schemas.enable = true
+tasks.max = 1
