--- a/9_3c_tgt-redis-redis-insert-product.properties
+++ b/9_3c_tgt-redis-redis-insert-product.properties
@@ -2,12 +2,12 @@
 # Owner = Saurav Mitra
 # Sink = Redis
 # Connector = RedisSinkConnector
-# Scenario = Insert/Update documents to Collection (product) from Kafka Topic (mysql-product)
+# Scenario = Insert/Update documents to Collection (product) from Kafka Topic (mysql-cdc-product)
 # Dependency = 3c_src-mysql-debezium-cdc-product.properties
 
 name = tgt-redis-redis-insert-product
 connector.class = com.github.jcustenborder.kafka.connect.redis.RedisSinkConnector
-topics = mysql-product
+topics = mysql-cdc-product
 redis.hosts = 10.0.1.100:6379
 redis.password = Pa55w0rd1234
 redis.database = 1
@@ -16,4 +16,4 @@ key.converter = org.apache.kafka.connect.storage.StringConverter
 key.converter.schemas.enable = false
 value.converter = org.apache.kafka.connect.converters.ByteArrayConverter
 value.converter.schemas.enable = false
-tasks.max = 3
+tasks.max = 1
