--- a/1b_src-orcl-jdbc-incr-consultants.properties
+++ b/1b_src-orcl-jdbc-incr-consultants.properties
@@ -2,12 +2,12 @@
 # Owner = Saurav Mitra
 # Source = Oracle
 # Connector = JdbcSourceConnector
-# Scenario = Incremental Extraction Single Table (CONSULTANTS) to Kafka Topic (ORCL-CONSULTANTS); Poll after 5 minutes
+# Scenario = Incremental Extraction Single Table (CONSULTANTS) to Kafka Topic (ORCL-INCR-CONSULTANTS); Poll after 5 minutes
 
 name = src-orcl-jdbc-incr-consultants
 connector.class = io.confluent.connect.jdbc.JdbcSourceConnector
-connection.url = jdbc:oracle:thin:@10.0.1.100:1521/XE
-connection.user = orcl_user
+connection.url = jdbc:oracle:thin:@10.0.1.100:1521/ORCLPDB1
+connection.user = ORCL_USER
 connection.password = Pa55w0rd1234
 table.whitelist = ORCL_USER.CONSULTANTS
 numeric.mapping = best_fit
@@ -16,14 +16,15 @@ table.types = TABLE
 incrementing.column.name = ID
 timestamp.column.name = UPDATED_AT
 poll.interval.ms = 300000
-topic.prefix = ORCL-
-key.converter = org.apache.kafka.connect.json.JsonConverter
+topic.prefix = ORCL-INCR-
+# key.converter = org.apache.kafka.connect.json.JsonConverter
+key.converter = org.apache.kafka.connect.storage.StringConverter
 key.converter.schemas.enable = false
-# value.converter = org.apache.kafka.connect.json.JsonConverter
-# value.converter.schemas.enable = false
+# value.converter = io.confluent.connect.avro.AvroConverter
+# value.converter.schemas.enable = true
 transforms = createKey,extractInt
 transforms.createKey.type = org.apache.kafka.connect.transforms.ValueToKey
 transforms.createKey.fields = ID
 transforms.extractInt.type = org.apache.kafka.connect.transforms.ExtractField$Key
 transforms.extractInt.field = ID
-tasks.max = 3
+tasks.max = 1
