--- a/2a_src-pg-jdbc-bulk-consultants.properties
+++ b/2a_src-pg-jdbc-bulk-consultants.properties
@@ -15,13 +15,14 @@ mode = bulk
 table.types = TABLE
 poll.interval.ms = 86400000
 topic.prefix = pg-bulk-
-key.converter = org.apache.kafka.connect.json.JsonConverter
+# key.converter = org.apache.kafka.connect.json.JsonConverter
+key.converter = org.apache.kafka.connect.storage.StringConverter
 key.converter.schemas.enable = false
-# value.converter = org.apache.kafka.connect.json.JsonConverter
-# value.converter.schemas.enable = false
+# value.converter = io.confluent.connect.avro.AvroConverter
+# value.converter.schemas.enable = true
 transforms = createKey,extractInt
 transforms.createKey.type = org.apache.kafka.connect.transforms.ValueToKey
 transforms.createKey.fields = id
 transforms.extractInt.type = org.apache.kafka.connect.transforms.ExtractField$Key
 transforms.extractInt.field = id
-tasks.max = 3
+tasks.max = 1
