--- a/2b_src-pg-jdbc-incr-consultants.properties
+++ b/2b_src-pg-jdbc-incr-consultants.properties
@@ -16,13 +16,14 @@ table.types = TABLE
 incrementing.column.name = id
 poll.interval.ms = 300000
 topic.prefix = pg-incr-
-key.converter = org.apache.kafka.connect.json.JsonConverter
+# key.converter = org.apache.kafka.connect.json.JsonConverter
+key.converter = org.apache.kafka.connect.storage.StringConverter
 key.converter.schemas.enable = false
-# value.converter = org.apache.kafka.connect.json.JsonConverter
-# value.converter.schemas.enable = false
+# value.converter = io.confluent.connect.avro.AvroConverter
+# value.converter.schemas.enable = true
 transforms = createKey,extractInt
 transforms.createKey.type = org.apache.kafka.connect.transforms.ValueToKey
 transforms.createKey.fields = id
 transforms.extractInt.type = org.apache.kafka.connect.transforms.ExtractField$Key
 transforms.extractInt.field = id
-tasks.max = 3
+tasks.max = 1
