--- a/3a_src-mysql-jdbc-bulk-product.properties
+++ b/3a_src-mysql-jdbc-bulk-product.properties
@@ -1,20 +1,20 @@
-# Name = 1a_src-orcl-jdbc-bulk-employees.properties
+# Name = 3b_src-mysql-jdbc-bulk-product.properties
 # Owner = Saurav Mitra
-# Source = Oracle
+# Source = MySQL
 # Connector = JdbcSourceConnector
-# Scenario = Bulk Load Single Table (EMPLOYEES) to Kafka Topic (ORCL-BULK-EMPLOYEES); Poll after 24 hours
+# Scenario = Bulk Load Single Table (product) to Kafka Topic (mysql-bulk-product); Poll after 24 hours
 
-name = src-orcl-jdbc-bulk-employees
+name = src-mysql-jdbc-bulk-product
 connector.class = io.confluent.connect.jdbc.JdbcSourceConnector
-connection.url = jdbc:oracle:thin:@10.0.1.100:1521/ORCLPDB1
-connection.user = ORCL_USER
+connection.url = jdbc:mysql://10.0.1.100:3306/sales
+connection.user = root
 connection.password = Pa55w0rd1234
-table.whitelist = ORCL_USER.EMPLOYEES
+table.whitelist = sales.product
 numeric.mapping = best_fit
 mode = bulk
 table.types = TABLE
 poll.interval.ms = 86400000
-topic.prefix = ORCL-BULK-
+topic.prefix = mysql-bulk-
 # key.converter = org.apache.kafka.connect.json.JsonConverter
 key.converter = org.apache.kafka.connect.storage.StringConverter
 key.converter.schemas.enable = false
@@ -22,7 +22,7 @@ key.converter.schemas.enable = false
 # value.converter.schemas.enable = true
 transforms = createKey,extractInt
 transforms.createKey.type = org.apache.kafka.connect.transforms.ValueToKey
-transforms.createKey.fields = EMPLOYEE_ID
+transforms.createKey.fields = id
 transforms.extractInt.type = org.apache.kafka.connect.transforms.ExtractField$Key
-transforms.extractInt.field = EMPLOYEE_ID
+transforms.extractInt.field = id
 tasks.max = 1
