--- a/3b_src-mysql-jdbc-incr-product.properties
+++ b/3b_src-mysql-jdbc-incr-product.properties
@@ -1,28 +1,29 @@
-# Name = 3b_src-mysql-jdbc-incr-customer.properties
+# Name = 3b_src-mysql-jdbc-incr-product.properties
 # Owner = Saurav Mitra
 # Source = MySQL
 # Connector = JdbcSourceConnector
-# Scenario = Incremental Extraction Single Table (CUSTOMER) to Kafka Topic (MYSQL-CUSTOMER); Poll after 5 minutes
+# Scenario = Incremental Extraction Single Table (product) to Kafka Topic (mysql-incr-product); Poll after 5 minutes
 
-name = src-mysql-jdbc-incr-customer
+name = src-mysql-jdbc-incr-product
 connector.class = io.confluent.connect.jdbc.JdbcSourceConnector
 connection.url = jdbc:mysql://10.0.1.100:3306/sales
 connection.user = root
 connection.password = Pa55w0rd1234
-table.whitelist = CUSTOMER
+table.whitelist = sales.product
 numeric.mapping = best_fit
 mode = incrementing
 table.types = TABLE
 incrementing.column.name = id
 poll.interval.ms = 300000
-topic.prefix = MYSQL-
-key.converter = org.apache.kafka.connect.json.JsonConverter
+topic.prefix = mysql-incr-
+# key.converter = org.apache.kafka.connect.json.JsonConverter
+key.converter = org.apache.kafka.connect.storage.StringConverter
 key.converter.schemas.enable = false
-# value.converter = org.apache.kafka.connect.json.JsonConverter
-# value.converter.schemas.enable = false
+# value.converter = io.confluent.connect.avro.AvroConverter
+# value.converter.schemas.enable = true
 transforms = createKey,extractInt
 transforms.createKey.type = org.apache.kafka.connect.transforms.ValueToKey
 transforms.createKey.fields = id
 transforms.extractInt.type = org.apache.kafka.connect.transforms.ExtractField$Key
 transforms.extractInt.field = id
-tasks.max = 3
+tasks.max = 1
