--- a/4b_src-mssql-jdbc-incr-customer.properties
+++ b/4b_src-mssql-jdbc-incr-customer.properties
@@ -1,20 +1,23 @@
-# Name = 1a_src-orcl-jdbc-bulk-employees.properties
+# Name = 2a_src-mssql-jdbc-incr-customer.properties
 # Owner = Saurav Mitra
-# Source = Oracle
+# Source = MSSQL
 # Connector = JdbcSourceConnector
-# Scenario = Bulk Load Single Table (EMPLOYEES) to Kafka Topic (ORCL-BULK-EMPLOYEES); Poll after 24 hours
+# Scenario = Incremental Extraction Single Table (customer) to Kafka Topic (mssql-incr-Customer); Poll after 5 minutes
 
-name = src-orcl-jdbc-bulk-employees
+name = src-mssql-jdbc-incr-customer
 connector.class = io.confluent.connect.jdbc.JdbcSourceConnector
-connection.url = jdbc:oracle:thin:@10.0.1.100:1521/ORCLPDB1
-connection.user = ORCL_USER
+connection.url = jdbc:sqlserver://10.0.1.100:1433;databaseName=AdventureWorks
+connection.user = sa
 connection.password = Pa55w0rd1234
-table.whitelist = ORCL_USER.EMPLOYEES
+table.whitelist = Customer
+# catalog.pattern = SalesLT
+schema.pattern = SalesLT
 numeric.mapping = best_fit
-mode = bulk
+mode = incrementing
 table.types = TABLE
-poll.interval.ms = 86400000
-topic.prefix = ORCL-BULK-
+incrementing.column.name = CustomerID
+poll.interval.ms = 300000
+topic.prefix = mssql-incr-
 # key.converter = org.apache.kafka.connect.json.JsonConverter
 key.converter = org.apache.kafka.connect.storage.StringConverter
 key.converter.schemas.enable = false
@@ -22,7 +25,7 @@ key.converter.schemas.enable = false
 # value.converter.schemas.enable = true
 transforms = createKey,extractInt
 transforms.createKey.type = org.apache.kafka.connect.transforms.ValueToKey
-transforms.createKey.fields = EMPLOYEE_ID
+transforms.createKey.fields = CustomerID
 transforms.extractInt.type = org.apache.kafka.connect.transforms.ExtractField$Key
-transforms.extractInt.field = EMPLOYEE_ID
+transforms.extractInt.field = CustomerID
 tasks.max = 1
