--- a/9_2c_tgt-pg-jdbc-upsert-consultants.properties
+++ b/9_2c_tgt-pg-jdbc-upsert-consultants.properties
@@ -2,23 +2,24 @@
 # Owner = Saurav Mitra
 # Sink = PostgreSQL
 # Connector = JdbcSinkConnector
-# Scenario = Insert/Update Single Table (consultants) from Kafka Topic (pg-consultants)
+# Scenario = Insert/Update Single Table (consultants) from Kafka Topic (pg-cdc-consultants)
 # Dependency = 2c_src-pg-debezium-cdc-consultants.properties
 
 name = tgt-pg-jdbc-consultants
 connector.class = io.confluent.connect.jdbc.JdbcSinkConnector
-topics = pg-consultants
+topics = pg-cdc-consultants
 connection.url = jdbc:postgresql://10.0.1.100:5433/postgres?stringtype=unspecified
 connection.user = postgres
 connection.password = Pa55w0rd1234
 insert.mode = upsert
-# pk.mode = record_key
-pk.mode = record_value
+pk.mode = record_key
+# pk.mode = record_value
 pk.fields = id
+delete.enabled = true
 table.name.format = consultants
 auto.create = false
-key.converter = org.apache.kafka.connect.json.JsonConverter
+key.converter = org.apache.kafka.connect.storage.StringConverter
 key.converter.schemas.enable = false
-# value.converter = org.apache.kafka.connect.json.JsonConverter
-# value.converter.schemas.enable = false
-tasks.max = 3
+# value.converter = io.confluent.connect.avro.AvroConverter
+# value.converter.schemas.enable = true
+tasks.max = 1
