config changes for demo

--- a/1c_src-orcl-oracle-cdc-consultants.properties
+++ b/1c_src-orcl-oracle-cdc-consultants.properties
@@ -27,6 +27,7 @@ table.topic.name.template = ORCL-CDC-${databaseName}-${tableName}
 lob.topic.name.template = ORCL-CDC-${databaseName}-${tableName}-${columnName}
 confluent.topic.replication.factor = 1
 redo.log.topic.name = oracle-redo-log-topic
+redo.log.consumer.fetch.min.bytes = 1
 redo.log.row.fetch.size = 1
 topic.creation.redo.include = oracle-redo-log-topic
 
@@ -44,17 +45,12 @@ topic.creation.default.replication.factor = 1
 topic.creation.default.partitions = 1
 topic.creation.default.cleanup.policy = compact
 
-# key.converter = org.apache.kafka.connect.json.JsonConverter
 key.converter = org.apache.kafka.connect.storage.StringConverter
 key.converter.schemas.enable = false
 value.converter = io.confluent.connect.avro.AvroConverter
 value.converter.schemas.enable = true
 value.converter.schema.registry.url = https://ip-10-0-1-30.us-west-2.compute.internal:8081
-transforms = createKey,extractInt
-transforms.createKey.type = org.apache.kafka.connect.transforms.ValueToKey
-transforms.createKey.fields = ID
-transforms.extractInt.type = org.apache.kafka.connect.transforms.ExtractField$Key
-transforms.extractInt.field = ID
+
 tasks.max = 1
 
 
@@ -82,12 +78,3 @@ value.converter.schema.registry.ssl.keystore.location = /var/ssl/private/kafka_c
 value.converter.schema.registry.ssl.keystore.password = confluentkeystorestorepass
 value.converter.schema.registry.ssl.truststore.location = /var/ssl/private/kafka_connect.truststore.jks
 value.converter.schema.registry.ssl.truststore.password = confluenttruststorepass
-
-sasl.jaas.config = org.apache.kafka.common.security.plain.PlainLoginModule required username="kafka_connect" password="kafka_connect-secret";
-sasl.mechanism = PLAIN
-security.protocol = SASL_SSL
-ssl.key.password = confluentkeystorestorepass
-ssl.keystore.location = /var/ssl/private/kafka_connect.keystore.jks
-ssl.keystore.password = confluentkeystorestorepass
-ssl.truststore.location = /var/ssl/private/kafka_connect.truststore.jks
-ssl.truststore.password = confluenttruststorepass
