--- a/2c_src-pg-debezium-cdc-consultants.properties
+++ b/2c_src-pg-debezium-cdc-consultants.properties
@@ -2,7 +2,7 @@
 # Owner = Saurav Mitra
 # Source = PostgreSQL
 # Connector = PostgresConnector (Debezium)
-# Scenario = CDC Extraction Single Table (consultants) to Kafka Topic (pg-cdc-consultants)
+# Scenario = CDC Extraction Single Table (consultants) to Kafka Topic (pgserver.public.consultants)
 # Note: Replace the key field with primary key column
 
 name = src-pg-debezium-cdc-consultants
@@ -12,24 +12,32 @@ database.port = 5432
 database.user = postgres
 database.password = Pa55w0rd1234
 database.dbname = postgres
-database.server.name = debezium
+database.server.name = pgserver
 plugin.name = pgoutput
 table.include.list = public.consultants
-numeric.mapping = best_fit
-decimal.handling.mode = double
 time.precision.mode = connect
-# key.converter = org.apache.kafka.connect.json.JsonConverter
-key.converter = org.apache.kafka.connect.storage.StringConverter
-key.converter.schemas.enable = false
-# value.converter = io.confluent.connect.avro.AvroConverter
-# value.converter.schemas.enable = true
-transforms = route,unwrap,key
-transforms.route.type = org.apache.kafka.connect.transforms.RegexRouter
-transforms.route.regex = (.*)\\.(.*)\\.(.*)
-transforms.route.replacement = pg-cdc-$3
-transforms.unwrap.type = io.debezium.transforms.ExtractNewRecordState
-transforms.unwrap.drop.tombstones = false
-transforms.unwrap.delete.handling.mode = none
-transforms.key.type = org.apache.kafka.connect.transforms.ExtractField$Key
-transforms.key.field = id
+decimal.handling.mode = string
 tasks.max = 1
+
+
+include.schema.changes = false
+database.history.kafka.bootstrap.servers = ip-10-0-1-20.us-west-2.compute.internal:9092,ip-10-0-1-21.us-west-2.compute.internal:9092,ip-10-0-1-22.us-west-2.compute.internal:9092
+database.history.kafka.topic = dbhistory.pg-public
+# SASL/SSL
+database.history.consumer.sasl.jaas.config = org.apache.kafka.common.security.plain.PlainLoginModule required username="kafka_connect" password="kafka_connect-secret";
+database.history.consumer.sasl.mechanism = PLAIN
+database.history.consumer.security.protocol = SASL_SSL
+database.history.consumer.ssl.key.password = confluentkeystorestorepass
+database.history.consumer.ssl.keystore.location = /var/ssl/private/kafka_connect.keystore.jks
+database.history.consumer.ssl.keystore.password = confluentkeystorestorepass
+database.history.consumer.ssl.truststore.location = /var/ssl/private/kafka_connect.truststore.jks
+database.history.consumer.ssl.truststore.password = confluenttruststorepass
+
+database.history.producer.sasl.jaas.config = org.apache.kafka.common.security.plain.PlainLoginModule required username="kafka_connect" password="kafka_connect-secret";
+database.history.producer.sasl.mechanism = PLAIN
+database.history.producer.security.protocol = SASL_SSL
+database.history.producer.ssl.key.password = confluentkeystorestorepass
+database.history.producer.ssl.keystore.location = /var/ssl/private/kafka_connect.keystore.jks
+database.history.producer.ssl.keystore.password = confluentkeystorestorepass
+database.history.producer.ssl.truststore.location = /var/ssl/private/kafka_connect.truststore.jks
+database.history.producer.ssl.truststore.password = confluenttruststorepass
