--- a/3c_src-mysql-debezium-cdc-product.properties
+++ b/3c_src-mysql-debezium-cdc-product.properties
@@ -2,42 +2,27 @@
 # Owner = Saurav Mitra
 # Source = MySQL
 # Connector = MySqlConnector (Debezium)
-# Scenario = CDC Single Table (product) in Schema (sales) to Kafka Topic (mysql-cdc-product)
+# Scenario = CDC Single Table (product) in Schema (sales) to Kafka Topic (mysqlserver.sales.product)
 # Note: Replace the key field with primary key column
 
-name = src-mysql-debezium-cdc-sales
+name = src-mysql-debezium-cdc-product
 connector.class = io.debezium.connector.mysql.MySqlConnector
 database.hostname = 10.0.1.100
 database.port = 3306
 database.user = root
 database.password = Pa55w0rd1234
 # database.dbname = sales
-database.server.name = sales
-table.include.list = sales.product
+database.server.name = mysqlserver
 # database.include.list = sales
-include.schema.changes = false
-numeric.mapping = best_fit
-decimal.handling.mode = double
+table.include.list = sales.product
 time.precision.mode = connect
-# key.converter = org.apache.kafka.connect.json.JsonConverter
-key.converter = org.apache.kafka.connect.storage.StringConverter
-key.converter.schemas.enable = false
-# value.converter = io.confluent.connect.avro.AvroConverter
-# value.converter.schemas.enable = true
-transforms = route,unwrap,key
-transforms.route.type = org.apache.kafka.connect.transforms.RegexRouter
-transforms.route.regex = (.*)\\.(.*)\\.(.*)
-transforms.route.replacement = mysql-cdc-$3
-transforms.unwrap.type = io.debezium.transforms.ExtractNewRecordState
-transforms.unwrap.drop.tombstones = false
-transforms.unwrap.delete.handling.mode = none
-transforms.key.type = org.apache.kafka.connect.transforms.ExtractField$Key
-transforms.key.field = id
+decimal.handling.mode = string
 tasks.max = 1
+
+
+include.schema.changes = false
 database.history.kafka.bootstrap.servers = ip-10-0-1-20.us-west-2.compute.internal:9092,ip-10-0-1-21.us-west-2.compute.internal:9092,ip-10-0-1-22.us-west-2.compute.internal:9092
 database.history.kafka.topic = dbhistory.sales
-
-
 # SASL/SSL
 database.history.consumer.sasl.jaas.config = org.apache.kafka.common.security.plain.PlainLoginModule required username="kafka_connect" password="kafka_connect-secret";
 database.history.consumer.sasl.mechanism = PLAIN
