--- a/4c_src-mssql-debezium-cdc-customer.properties
+++ b/4c_src-mssql-debezium-cdc-customer.properties
@@ -1,8 +1,8 @@
-# Name = 2c_src-mssql-debezium-cdc-customer.properties
+# Name = 4c_src-mssql-debezium-cdc-customer.properties
 # Owner = Saurav Mitra
 # Source = MSSQL
 # Connector = SqlServerConnector (Debezium)
-# Scenario = CDC Extraction Single Table (customer) to Kafka Topic (mssql-cdc-Customer)
+# Scenario = CDC Extraction Single Table (customer) to Kafka Topic (mssqlserver.SalesLT.Customer)
 # Note: Replace the key field with primary key column
 
 name = src-mssql-debezium-cdc-customer
@@ -12,31 +12,25 @@ database.port = 1433
 database.user = sa
 database.password = Pa55w0rd1234
 database.dbname = AdventureWorks
-database.server.name = AdventureWorks
+database.server.name = mssqlserver
+# database.include.list = SalesLT
 table.include.list = SalesLT.Customer
-include.schema.changes = false
-numeric.mapping = best_fit
-decimal.handling.mode = double
 time.precision.mode = connect
-# key.converter = org.apache.kafka.connect.json.JsonConverter
-key.converter = org.apache.kafka.connect.storage.StringConverter
-key.converter.schemas.enable = false
-# value.converter = io.confluent.connect.avro.AvroConverter
-# value.converter.schemas.enable = true
-transforms = route,unwrap,key
-transforms.route.type = org.apache.kafka.connect.transforms.RegexRouter
-transforms.route.regex = (.*)\\.(.*)\\.(.*)
-transforms.route.replacement = mssql-cdc-$3
+decimal.handling.mode = string
+transforms = rename_key,unwrap
+# transforms.route.type = org.apache.kafka.connect.transforms.RegexRouter
+# transforms.route.regex = (.*)\\.(.*)\\.(.*)
+# transforms.route.replacement = mssql-cdc-$3
+transforms.rename_key.type = org.apache.kafka.connect.transforms.ReplaceField$Key
+transforms.rename_key.renames = CustomerID:customerid
 transforms.unwrap.type = io.debezium.transforms.ExtractNewRecordState
 transforms.unwrap.drop.tombstones = false
-transforms.unwrap.delete.handling.mode = none
-transforms.key.type = org.apache.kafka.connect.transforms.ExtractField$Key
-transforms.key.field = CustomerID
 tasks.max = 1
+
+
+include.schema.changes = false
 database.history.kafka.bootstrap.servers = ip-10-0-1-20.us-west-2.compute.internal:9092,ip-10-0-1-21.us-west-2.compute.internal:9092,ip-10-0-1-22.us-west-2.compute.internal:9092
 database.history.kafka.topic = dbhistory.saleslt
-
-
 # SASL/SSL
 database.history.consumer.sasl.jaas.config = org.apache.kafka.common.security.plain.PlainLoginModule required username="kafka_connect" password="kafka_connect-secret";
 database.history.consumer.sasl.mechanism = PLAIN
