--- a/8b_src-file-csvsrc-cust.properties
+++ b/8b_src-file-csvsrc-cust.properties
@@ -6,13 +6,16 @@
 
 name = src-file-csvsrc-cust
 connector.class = com.github.jcustenborder.kafka.connect.spooldir.SpoolDirCsvSourceConnector
-input.path = /tmp
+input.path = /tmp/src
 input.file.pattern = cust.txt
+error.path=/tmp/tgt
+finished.path=/tmp/tgt
 halt.on.error=false
 topic = file-csv-cust
-schema.generation.enabled = true
 csv.first.row.as.header = true
 csv.separator.char = 124
+csv.case.sensitive.field.names = true
+schema.generation.enabled = true
 schema.generation.key.fields = CustomerID
 tasks.max = 1
 
