--- a/9_1c_tgt-orcl-jdbc-upsert-consultants1.properties
+++ b/9_1c_tgt-orcl-jdbc-upsert-consultants1.properties
@@ -13,14 +13,23 @@ connection.user = ORCL_USER
 connection.password = Pa55w0rd1234
 insert.mode = upsert
 pk.mode = record_key
-# pk.mode = record_value
 pk.fields = ID
 delete.enabled = true
-fields.whitelist = FIRST_NAME,LAST_NAME,EMAIL,RATE,STATUS,CREATED_AT,UPDATED_AT
 table.name.format = CONSULTANTS1
 auto.create = false
+fields.whitelist = FIRST_NAME,LAST_NAME,EMAIL,RATE,STATUS,CREATED_AT,UPDATED_AT
+
 key.converter = org.apache.kafka.connect.storage.StringConverter
 key.converter.schemas.enable = false
-# value.converter = io.confluent.connect.avro.AvroConverter
-# value.converter.schemas.enable = true
+value.converter = io.confluent.connect.avro.AvroConverter
+value.converter.schemas.enable = true
+value.converter.schema.registry.url = https://ip-10-0-1-30.us-west-2.compute.internal:8081
+
 tasks.max = 1
+
+# SASL/SSL
+value.converter.schema.registry.ssl.key.password = confluentkeystorestorepass
+value.converter.schema.registry.ssl.keystore.location = /var/ssl/private/kafka_connect.keystore.jks
+value.converter.schema.registry.ssl.keystore.password = confluentkeystorestorepass
+value.converter.schema.registry.ssl.truststore.location = /var/ssl/private/kafka_connect.truststore.jks
+value.converter.schema.registry.ssl.truststore.password = confluenttruststorepass
