--- a/9_2b_tgt-pg-jdbc-upsert-consultants.properties
+++ b/9_2b_tgt-pg-jdbc-upsert-consultants.properties
@@ -1,13 +1,13 @@
-# Name = 9_2c_tgt-pg-jdbc-upsert-consultants.properties
+# Name = 9_2b_tgt-pg-jdbc-upsert-consultants.properties
 # Owner = Saurav Mitra
-# Sink = PostgreSQL
+# Sink = Oracle
 # Connector = JdbcSinkConnector
-# Scenario = Insert/Update Single Table (consultants) from Kafka Topic (pg-cdc-consultants)
-# Dependency = 2c_src-pg-debezium-cdc-consultants.properties
+# Scenario = Upsert Single Table (consultants) from Kafka Topic (pg-incr-consultants)
+# Dependency = 2b_src-pg-jdbc-incr-consultants.properties
 
-name = tgt-pg-jdbc-consultants
+name = tgt-pg-jdbc-upsert-consultants
 connector.class = io.confluent.connect.jdbc.JdbcSinkConnector
-topics = pg-cdc-consultants
+topics = pg-incr-consultants
 connection.url = jdbc:postgresql://10.0.1.100:5433/postgres?stringtype=unspecified
 connection.user = postgres
 connection.password = Pa55w0rd1234
