--- a/9_2c_tgt-elk-elastic-upsert-consultants.properties
+++ b/9_2c_tgt-elk-elastic-upsert-consultants.properties
@@ -2,7 +2,7 @@
 # Owner = Saurav Mitra
 # Sink = Elasticsearch
 # Connector = ElasticsearchSinkConnector
-# Scenario = Insert/Update documents to Index (consultants) from Kafka Topic (pg-cdc-consultants)
+# Scenario = Insert/Update documents to Index (consultants) from Kafka Topic (pgserver.public.consultants)
 # Dependency = 2c_src-pg-debezium-cdc-consultants.properties
 
 name = tgt-elk-elastic-upsert-consultants
@@ -10,22 +10,25 @@ connector.class = io.confluent.connect.elasticsearch.ElasticsearchSinkConnector
 connection.url = http://10.0.1.100:9200
 connection.username = elastic
 connection.password = Pa55w0rd1234
-topics = pg-cdc-consultants
+topics = pgserver.public.consultants
 write.method = upsert
 behavior.on.null.values = delete
-# key.ignore = true
-schema.ignore = true
+key.ignore = false
 compact.map.entries = true
-key.converter = org.apache.kafka.connect.storage.StringConverter
-key.converter.schemas.enable = false
-# value.converter = io.confluent.connect.avro.AvroConverter
-# value.converter.schemas.enable = true
-transforms = dropPrefix,InsertKey,ExtractId
-transforms.dropPrefix.type = org.apache.kafka.connect.transforms.RegexRouter
-transforms.dropPrefix.regex = pg-(.*)
-transforms.dropPrefix.replacement = $1
-transforms.InsertKey.type = org.apache.kafka.connect.transforms.ValueToKey
-transforms.InsertKey.fields = id 
-transforms.ExtractId.type = org.apache.kafka.connect.transforms.ExtractField$Key
-transforms.ExtractId.field = id
+transforms = unwrap,key,convert_create_ts,convert_update_ts,drop_prefix
+transforms.unwrap.type = io.debezium.transforms.ExtractNewRecordState
+transforms.unwrap.drop.tombstones = false
+transforms.key.type = org.apache.kafka.connect.transforms.ExtractField$Key
+transforms.key.field = id
+transforms.convert_create_ts.type = org.apache.kafka.connect.transforms.TimestampConverter$Value
+transforms.convert_create_ts.target.type = string
+transforms.convert_create_ts.field = created_at
+transforms.convert_create_ts.format = yyyy-MM-dd HH:mm:ss
+transforms.convert_update_ts.type = org.apache.kafka.connect.transforms.TimestampConverter$Value
+transforms.convert_update_ts.target.type = string
+transforms.convert_update_ts.field = updated_at
+transforms.convert_update_ts.format = yyyy-MM-dd HH:mm:ss
+transforms.drop_prefix.type = org.apache.kafka.connect.transforms.RegexRouter
+transforms.drop_prefix.regex = pgserver.public.(.*)
+transforms.drop_prefix.replacement = $1
 tasks.max = 1
