removed aws keys from config & rotated

--- a/9_4a_tgt-s3-sink-insert-customer.properties
+++ b/9_4a_tgt-s3-sink-insert-customer.properties
@@ -10,8 +10,8 @@ connector.class = io.confluent.connect.s3.S3SinkConnector
 topics = mssql-bulk-Customer
 s3.bucket.name = ashnik-confluent-s3-sink
 s3.region = ap-southeast-1
-aws.access.key.id = AKIASZRTRTN6AV6NS7XQ
-aws.secret.access.key = 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
+aws.access.key.id = XXXXXXXX
+aws.secret.access.key = XXXXXXXX
 storage.class = io.confluent.connect.s3.storage.S3Storage
 format.class = io.confluent.connect.s3.format.json.JsonFormat
 topics.dir = customer
