oracle-cdc-delete

--- a/1c_src-orcl-oracle-cdc-consultants.properties
+++ b/1c_src-orcl-oracle-cdc-consultants.properties
@@ -17,6 +17,7 @@ table.inclusion.regex = ORCLPDB1[.]ORCL_USER[.](CONSULTANTS)
 table.exclusion.regex = 
 numeric.mapping = best_fit
 start.from = snapshot
+emit.tombstone.on.delete = true
 
 connection.pool.max.size = 20
 max.batch.size = 100
